# Zadymka

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  init.lua
data/: init.lua
data/components/: PositionComponent.lua
data/states/: GameState.lua  MenuState.lua
demo/: init.lua
demo/components/: Identity.lua  Movable.lua  Physics.lua  Position.lua  Renderable.lua
demo/entities/: Entity.lua  Ground.lua  Player.lua
demo/maps/: testmap.lua  testmap.tmx
demo/states/: DemoState.lua  GameState.lua  MenuState.lua
demo/systems/: GUISystem.lua  MovementSystem.lua  PhysicsSystem.lua  RenderingSystem.lua  System.lua  TestSystem.lua
examples/: math.lua  window.lua
include/: Audio.hpp  Camera.hpp  ECS.hpp  Entity.hpp  EntityManager.hpp  EventManager.hpp  Game.hpp  GameState.hpp  Graphics.hpp  ImGui.hpp  Input.hpp  InputManager.hpp  Lua.hpp  LuaSystem.hpp  Math.hpp  RenderingSystem.hpp  Scriptable.hpp  StateManager.hpp  System.hpp  SystemManager.hpp  Timer.hpp  Window.hpp  Zadymka.hpp
include/Audio/: Audio.hpp  AudioBuffer.hpp  AudioSource.hpp  Sound.hpp
include/Audio/stb_vorbis/: stb_vorbis.hpp
include/ECS/: ECS.hpp  Entity.hpp  EntityManager.hpp  EventManager.hpp  GameState.hpp  Scriptable.hpp  StateManager.hpp  System.hpp  SystemManager.hpp
include/Graphics/: Camera.hpp  Color.hpp  DefaultRenderer.hpp  Drawable.hpp  Font.hpp  Glyph.hpp  Graphics.hpp  Rectangle.hpp  RenderTarget.hpp  RenderTarget.inl  RenderTexture.hpp  Renderer.hpp  Shader.hpp  Sprite.hpp  Text.hpp  Texture.hpp  Tilemap.hpp  Transformable.hpp  Vertex.hpp  VertexArray.hpp  Window.hpp
include/Physics/: Body.hpp  Util.hpp  World.hpp
lib/glad/: glad.c  glad.h
src/: Audio.cpp  Camera.cpp  ECS.cpp  Entity.cpp  EntityManager.cpp  EventManager.cpp  Game.cpp  GameState.cpp  Graphics.cpp  ImGui.cpp  Input.cpp  InputManager.cpp  Lua.cpp  LuaSystem.cpp  Math.cpp  StateManager.cpp  System.cpp  SystemManager.cpp  Timer.cpp  Window.cpp  Zadymka.cpp  main.cpp  middleclass.cpp
src/Audio/: Audio.cpp  AudioBuffer.cpp  AudioSource.cpp  Sound.cpp
src/ECS/: ECS.cpp  Entity.cpp  EntityManager.cpp  EventManager.cpp  GameState.cpp  StateManager.cpp  System.cpp  SystemManager.cpp
src/Graphics/: Camera.cpp  Color.cpp  DefaultRenderer.cpp  Font.cpp  Graphics.cpp  Rectangle.cpp  RenderTarget.cpp  RenderTexture.cpp  Shader.cpp  Sprite.cpp  Text.cpp  Texture.cpp  Tilemap.cpp  Transformable.cpp  VertexArray.cpp  Window.cpp
src/Graphics/glad/: glad.c
src/Graphics/stb_image/: stb_image.cpp
src/ImGui/: imgui_impl_glfw_gl3.cpp
src/Physics/: Body.cpp  Util.cpp  World.cpp
tests/: graphics_spec.lua  init_spec.lua  test.fs  test.vs  test_init.lua
